--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/admin_toolbar": "^1.23",
-        "drupal/adminimal_theme": "^1.3",
+        "drupal/adminimal_theme": "^1.5",
         "drupal/allowed_formats": "^1.1",
         "drupal/chosen": "^2.5",
         "drupal/config_installer": "^1.6",
@@ -46,7 +46,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.4",
         "drupal/ctools": "^3.0",
-        "drupal/drupal-extension": "^3.4",
+        "drupal/drupal-extension": "^4.0",
         "drupal/embed": "^1.0",
         "drupal/entity_browser": "^2.0",
         "drupal/entity_embed": "^1.0",
@@ -66,8 +66,7 @@
         "harvesthq/chosen": "^1.8",
         "henrikbjorn/lurker": "^1.2",
         "nuvoleweb/robo-config": "^0.2",
-        "openeuropa/oe_theme": "dev-master",
-        "openeuropa/oe_paragraphs": "dev-master",
+        "openeuropa/oe_theme": "^2.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
@@ -121,18 +120,8 @@
         "_comment_patches": "Temporarily enabling patches on chained composer.json until config_installer is on core",
         "patches": {
             "enable-patching" : true,
-            "drupal/core": {
-                "Backwards variables in Install profile validation error message": "https://www.drupal.org/files/issues/backwards_variables_in_message-2867834-25.patch"
-            },
-            "drupal/adminimal_theme": {
-                "Colors in horizontal and vertical toolbar need fixing": "https://www.drupal.org/files/issues/adminimal_theme-fix-toolbar-colors-28226369.patch"
-            },
             "drupal/views": {
                 "Recoverable fatal error: Argument 2 passed to Drupal\\views\\Plugin\\views\\relationship\\RelationshipPluginBase::init() must be an instance of Drupal\\views\\Plugin\\views\\display\\DisplayPluginBase": "https://www.drupal.org/files/issues/2806015.patch"
-            },
-            "drupal/group": {
-                "Port Subgroup (ggroup) to the D8 version": "https://www.drupal.org/files/issues/group-add_subgroups_module-2736233-145.patch",
-                "More contexts needed": "https://www.drupal.org/files/issues/expand_context_to_nodes-2815971-14.patch"
             },
             "drupal/geocoder": {
                 "using reverse geocoding behind a proxy": "https://www.drupal.org/files/issues/using_reverse_geocoding_behind_proxy-2796277-3.patch"
